jsonschemadsl2ecore.trafo.opt/test/test94/validtests/example2.test94
{
	"adddv":"string is good",
	"xxcccxx":2,
	"zzzfff":5,
	"qqqeeesss":"more than 6"
}