jsonschemadsl2ecore.trafo.opt/test/test94/invalidtests/example12.test94
{
	"adddv":"string is good",
	"xxcccxx":2,
	"zzzfff":5,
	"qqqeeesss":"more than 6",
	"qqfff":7,
	"rererccc":2,
	"sscccfff":4,
	"tttdddeee":"less6"
}